fix decor overflow

--- a/css/main.scss
+++ b/css/main.scss
@@ -1079,6 +1079,7 @@ body {
 }
 
 .decor {
+    overflow: hidden;
     position: absolute;
     z-index: -10;
     top: 0;
